--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
